# thermoscope_app

./: .gitignore  Cargo.toml  README.md  build.rs
src/: device.rs  internal_notes.txt  lib.rs  main.rs  uvc_adapter.rs
